--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,4 @@
 @import "./sections/header.css";
 @import "./sections/contact.css";
 @import "./sections/informations.css";
+@import "./sections/offer.css";
