--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,4 @@
 @import "./sections/contact.css";
 @import "./sections/informations.css";
 @import "./sections/offer.css";
+@import "./sections/hero.css";
