--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -1,31 +1,41 @@
 header {
-    /* position: relative; */
-    background-color: #005AD5;
-    overflow: hidden;
-    /* opacity: 0.5; */
-    margin: 0 auto;
-  }
+  width: 100%;
+  background-color: #005AD5;
 
-  .triangle-bottomright{
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 200px solid #005AD5;
-    border-right: 2070px solid transparent;
-  }
+}
 
-  header nav ul {
-    margin-top: 1rem;
-    color: white;
+  header .logo_nav{
+    min-height: 10rem;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin-left: 5vw;
+    flex-direction:row ;
+    align-items: center;
+    margin-left: 5%;
   }
   
-  header nav ul li {
-    margin-right: 3rem;
+  header .logo{
+    width: 60%;
+  }
+
+  header .nav{
+    color: white;
+    list-style: none;
+
+  }
+  
+  header .nav nav ul {
+    color: white;
+    display: flex;
+    list-style: none;
+  }
+  
+  header .nav ul li {
     padding: 0 3rem;
+  }
+  header .nav ul li a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.5rem;
   }
   
   header nav ul li:hover {
@@ -34,45 +44,3 @@ header {
     font-weight: 900;
   } 
   
-  header div.tak {
-    top: 15%;
-    left: 7%;
-    right: 48%;
-    color: white;
-    font-size: 20px;
-    text-align: center;
-  }
-  
-  
-  header h1 {
-    margin-top: 15px;
-    font-size: 20px;
-    font-size: 35px;
-    margin-bottom: 40px;
-  }
-  
-  header h2 {
-    font-size: 25px;
-    font-weight: normal;
-
-  }
-  
-  header button {
-    margin-top: 80px;
-    font-weight: 300;
-    font-size: 15px;
-    line-height: 70px;
-    padding: 0 20px;
-    color: #005AD5;
-    font-size: 12px;
-    background-color: white;
-    cursor: pointer;
-    border-radius: 10px;
-  }
-
-
-  header img {
-    height: 0%;
-    bottom: 0;
-    right: 0%;
-  }
