--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -1,46 +1,39 @@
 header {
-  width: 100%;
-  background-color: #005AD5;
-
+	width: 100%;
+	background-color: #005ad5;
 }
 
-  header .logo_nav{
-    min-height: 10rem;
-    width: 100%;
-    display: flex;
-    flex-direction:row ;
-    align-items: center;
-    margin-left: 5%;
-  }
-  
-  header .logo{
-    width: 60%;
-  }
+header .header_container {
+	min-height: 160px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin-left: 5%;
+}
 
-  header .nav{
-    color: white;
-    list-style: none;
+header .logo {
+	width: 60%;
+}
 
-  }
-  
-  header .nav nav ul {
-    color: white;
-    display: flex;
-    list-style: none;
-  }
-  
-  header .nav ul li {
-    padding: 0 3rem;
-  }
-  header .nav ul li a{
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-  }
-  
-  header nav ul li:hover {
-    cursor: pointer;
-    color: white;
-    font-weight: 900;
-  } 
-  
+header nav ul {
+	color: white;
+	display: flex;
+	list-style: none;
+}
+
+header ul li {
+	padding: 0 40%;
+}
+
+header ul li a {
+	text-decoration: none;
+	color: white;
+	font-size: 1.5rem;
+}
+
+header nav ul li:hover {
+	cursor: pointer;
+	color: white;
+	font-weight: 900;
+}
