--- a/css/sections/offer.css
+++ b/css/sections/offer.css
@@ -1,64 +1,60 @@
 #offer {
-    margin-top: 200px;
-    max-width: 1864px;
-    text-align: center;
-    padding: 5%;
-  }
-  
-  #offer h1 {
-    font-size: 50px;
-    margin-bottom: 15px;
-  
-  }
-  
-  #offer h2 {
-    font-size: 26px;
-  }
-  
-  #offer p {
-    font-size: 18px;
-    line-height: 140%;
-    padding: 0 20px;
-    font-weight: 200%;
-    margin-top: 5%;
-  }
-
-.all_products{
-  margin: 20px;
-  padding: 50px;
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  
+	margin-top: 200px;
+	max-width: 1864px;
+	text-align: center;
+	padding: 5%;
 }
 
-.products {
-  border: solid 2px black;
-  border-radius: 20px;
-  width: 30%;
+#offer h1 {
+	font-size: 50px;
+	margin-bottom: 15px;
 }
 
-.products input {
-    width: 150px;
-    height: 60px;
-    color: #005AD5;
-    border: solid #005AD5 2px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.button1{
-  margin-top: 2.5%;
-  margin-bottom: 10%;
+#offer h2 {
+	font-size: 26px;
 }
 
-.button2{
-  margin-top: 10%;
+#offer p {
+	font-size: 18px;
+	line-height: 140%;
+	padding: 0 20px;
+	font-weight: 200%;
+	margin-top: 5%;
 }
 
-.button3{
-  margin-top: 10%;
+.all_products {
+	margin: 20px;
+	padding: 5%;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: space-between;
 }
 
-.products input:hover {
-    color: red;
+.product {
+	min-height: 500px;
+	border: solid 2px black;
+	border-radius: 20px;
+	width: 30%;
+}
+
+.product button {
+	width: 150px;
+	height: 60px;
+	color: #005ad5;
+	border: solid #005ad5 2px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+button {
+	margin-top: 2.5%;
+	margin-bottom: 10%;
+}
+
+.product button:hover {
+	color: red;
+}
+
+.product .offer_tile_image {
+	padding-top: 5%;
 }
