rosponsive for mobile-phone

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -4,5 +4,5 @@
 @import "./sections/_hero.scss";
 @import "./sections/_offer.scss";
 @import "./sections/_informations.scss";
-@import "./sections/contact";
-@import "./_mediaqueries.scss";
+@import "./sections/_contact.scss";
+@import "./_grid.scss";
