--- a/scss/sections/_informations.scss
+++ b/scss/sections/_informations.scss
@@ -49,3 +49,29 @@
 		}
 	}
 }
+
+@media (max-width: 767px) {
+	main {
+		#informations {
+			.informations_container {
+				width: 100%;
+				.information_block {
+					flex-wrap: wrap;
+					flex-direction: column;
+					align-items: center;
+					.information_image {
+					}
+					.information_block_decription {
+						width: 90%;
+						text-align: center;
+					}
+				}
+			}
+		}
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+	//lg
+}
