--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -67,3 +67,33 @@
 		}
 	}
 }
+
+@media (max-width: 767px) {
+	#contact {
+		.contact_container {
+			form {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				.name {
+					width: 90%;
+					margin: 0;
+				}
+				.email {
+					width: 90%;
+				}
+				.topic {
+					width: 90%;
+				}
+				.description {
+					width: 90%;
+				}
+			}
+		}
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+	//lg
+}
