--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -5,21 +5,24 @@ body {
 		background-color: $primary-color;
 		.header_container {
 			min-height: 160px;
-			width: 100%;
+			width: 90%;
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			margin-left: 5%;
+			justify-content: space-between;
+			margin: 0 5%;
+
 			.logo {
-				width: 60%;
+				display: flex;
 			}
 			nav {
+				justify-content: end;
 				ul {
 					color: $secondary-color;
 					display: flex;
 					list-style: none;
 					li {
-						padding: 0% 40%;
+						min-width: 100px;
 						&:hover {
 							cursor: pointer;
 							color: $secondary-color;
@@ -28,11 +31,49 @@ body {
 						a {
 							text-decoration: none;
 							color: white;
-							font-size: 1rem;
+							font-size: 23px;
 						}
 					}
 				}
 			}
 		}
 	}
+}
+
+@media (max-width: 767px) {
+	body header .header_container {
+		flex-direction: column;
+		flex-wrap: wrap;
+		height: auto;
+	}
+	.logo {
+		margin-top: 2%;
+		width: 50%;
+		justify-content: center;
+	}
+	nav {
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 15%;
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			width: 100%;
+			padding: 0;
+			justify-content: center;
+			// font-size: 10px;
+			li {
+				display: flex;
+				justify-content: center;
+				a {
+					padding-top: 20%;
+				}
+			}
+		}
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+	//lg
 }
