--- a/scss/sections/_offer.scss
+++ b/scss/sections/_offer.scss
@@ -20,16 +20,16 @@
 		margin-top: 5%;
 	}
 	.all_products {
-		margin: 20px;
-		padding: 5%;
 		box-sizing: border-box;
 		display: flex;
 		justify-content: space-between;
+
 		.product {
+			margin: 0 10% 0 0;
 			min-height: 500px;
 			border: solid 2px black;
 			border-radius: 20px;
-			width: 30%;
+
 			button {
 				width: 150px;
 				height: 60px;
@@ -47,4 +47,19 @@
 			}
 		}
 	}
+}
+
+@media (max-width: 767px) {
+	#offer {
+		.all_products {
+			.product {
+				margin: 3% 0;
+			}
+		}
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+}
+@media (min-width: 992px) and (max-width: 1199px) {
+	//lg
 }
