--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -50,7 +50,7 @@
         }
       }
 
-      .name_email {
+      .data_mini_container {
         display: flex;
         width: 100%;
         flex-direction: row;
@@ -92,7 +92,7 @@
         flex-direction: column;
         align-items: center;
 
-        .name_email {
+        .data_mini_container {
           display: flex;
           width: 90%;
           flex-direction: column;
@@ -127,7 +127,7 @@
         flex-direction: column;
         align-items: center;
 
-        .name_email {
+        .data_mini_container {
           display: flex;
           width: 90%;
           flex-direction: column;
@@ -162,7 +162,7 @@
         flex-direction: row;
         align-items: center;
 
-        .name_email {
+        .data_mini_container {
           display: flex;
           width: 90%;
           justify-content: space-between;
