--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -36,7 +36,7 @@ body {
             }
 
             a {
-              font-size: 23px;
+              font-size: 1.5rem;
               text-decoration: none;
               color: white;
             }
