--- a/scss/sections/_informations.scss
+++ b/scss/sections/_informations.scss
@@ -6,7 +6,7 @@
     display: flex;
     width: 100%;
     max-width: 1400px;
-    margin: 0 auto 40px;
+    margin: 0 auto auto;
     flex-direction: column;
 
     .information_block {
@@ -15,7 +15,7 @@
 
       .information_block_decription {
         width: 50%;
-        padding: 2% 5% 5% 0%;
+        padding: 2% 5% 5% 2%;
         color: black;
         font-weight: normal;
         text-align: left;
@@ -23,21 +23,16 @@
         h1 {
           color: black;
           padding: 2% 0%;
-          margin-bottom: 15px;
-          font-size: 40px;
-          text-indent: 40px;
+          font-size: 2.5rem;
         }
 
         h2 {
-          font-size: 28px;
-          margin-bottom: 20px;
+          font-size: 1.6rem;
           padding: 10% 0 2% 0;
-          text-indent: 40px;
         }
 
         p {
-          padding-left: 10%;
-          font-size: 18px;
+          font-size: 1rem;
           line-height: 180%;
         }
       }
