--- a/scss/sections/_offer.scss
+++ b/scss/sections/_offer.scss
@@ -6,15 +6,15 @@
   text-align: center;
 
   h1 {
-    font-size: 50px;
+    font-size: 3rem;
   }
 
   h2 {
-    font-size: 26px;
+    font-size: 1.6rem;
   }
 
   p {
-    font-size: 18px;
+    font-size: 1rem;
     line-height: 140%;
     padding: 0 20px;
     font-weight: 200;
